Wed Jun 27 20:25:51 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DomainParticipantFactoryImpl.cpp:
        * dds/DCPS/DomainParticipantImpl.h:
        * dds/DCPS/DomainParticipantImpl.cpp:
        * dds/DCPS/Util.h:

          More std::map and std::set replacements for ACE equivalents.

Wed Jun 27 19:41:00 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/DomainParticipantFactoryImpl.h:
        * dds/DCPS/Registered_Data_Types.cpp:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkCleanupTask.cpp:
        * dds/DCPS/transport/framework/ReceiveListenerSetMap.h:
        * dds/DCPS/transport/framework/ReceiveListenerSetMap.inl:
        * dds/DCPS/transport/framework/ReceiveListenerSetMap.cpp:

          More std::map replacements for ACE equivalents.

Wed Jun 27 18:48:54 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkCleanupTask.cpp:
        * dds/DCPS/transport/framework/RepoIdSet.h:
        * dds/DCPS/transport/framework/RepoIdSet.inl:
        * dds/DCPS/transport/framework/RepoIdSet.cpp:
        * dds/DCPS/transport/framework/TransportImpl.cpp:

          More std::map replacements for ACE equivalents.

Wed Jun 27 16:20:33 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkCleanupTask.cpp:
        * dds/DCPS/transport/framework/RepoIdSetMap.h:
        * dds/DCPS/transport/framework/RepoIdSetMap.inl:
        * dds/DCPS/transport/framework/RepoIdSetMap.cpp:

          More std::map replacements for ACE equivalents.

Wed Jun 27 15:13:03 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/transport/framework/TransportImpl.h:
        * dds/DCPS/transport/framework/TransportImpl.inl: