@@ -1,3 +1,12 @@
+Wed Jun 27 21:22:25 UTC 2007  Yan Dai  <dai_y@ociweb.com>
+
+        * tests/DCPS/TransientLocalTest/run_test.pl:
+
+          Made subscriber start 2 seconds after publisher send all samples to avoid 
+          the timing issue that the subscriber may start and finish in 1 second while
+          the publisher is waiting for it to start until timeout. This should fix the
+          TransientLocalTest test failure occassionally.
+
 Wed Jun 27 20:25:51 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>
 
         * dds/DCPS/DomainParticipantFactoryImpl.cpp:
